package com.monolieta.pandora.android.ui

const val AVATAR_TAG = "Avatar"
const val EMAIL_INPUT_TAG = "Email"
const val PASSWORD_INPUT_TAG = "Password"
const val CONFIRM_INPUT_TAG = "Confirm"
const val LOGIN_ACTION_TAG = "Log in"
const val CREATE_ACCOUNT_ACTION_TAG = "Create account"
const val CREATE_ACCOUNT_LINK_TAG = "Create account"
const val BACK_TAG = "Back"
const val CODE_INPUT_TAG = "Code"